<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SatelliteEntitlementTestServerApp"
    android:orientation="vertical"
    android:gravity="center_vertical">>
    <Button
        android:id="@+id/serverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/start_server"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/serverStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/server_down"
            android:textColor="#4CAF50"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/entitlementStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/entitlement_status_textview"
                android:textColor="#4CAF50"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/entitlementStatusSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:textColor="#4CAF50"
                android:textSize="20sp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/clientRequestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/client_request_textview"
            android:textColor="#0000CD"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/plmnChangeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/plmn_change_textView"
            android:textColor="#4CAF50"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/plmnChangeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="6"
            android:autofillHints=""
            android:hint=""/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/plmnChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/plmn_change_button"/>
            <Button
                android:id="@+id/plmnRestoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/plmn_restore_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/responseCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/response_code_textview"
                android:textColor="#4CAF50"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/responseSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:textColor="#4CAF50"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/serverResponseCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/server_response_textview"
            android:textColor="#0000FF"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/currentPlmn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/getIsNtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/getPlmnsDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/getIsUsingNtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/availableServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:visibility="gone"
        android:text="@string/refresh_button"/>
</LinearLayout>